# misc

./: AUTHORS  data_spoofer_receiver.c  data_spoofer_sender.c  errors.rb  filemanager.rb  printfile.c  realtimeclock.h  semaphore.rb  shlog.sh  symcrypt.c
apidoc/: README.md  api.css
binsh/: README.md  binsh.c  build.sh  shbin.c
coding/: README.md
coding/crypto/: README.md  aes.py  dh.py  hmac.py  rsa.py  sha2.py  test_aes.py  test_hmac.py  test_sha2.py  test_tls.py  tls.py
coding/data_spoofer/: README.md
coding/jitpoc/: Makefile  README.md  jit.c
coding/misc/: fork_chain.rb  rsa.py  shlog.sh  web-xpath
coding/realtimeclock/: Makefile
coding/rgrep/: Cargo.toml
coding/rgrep/src/: lib.rs  main.rs  search.rs  walkpaths.rs
coding/rgrep/src/cli/: args.rs  mod.rs  options.rs  print.rs  results.rs
coding/rgrep/src/search/: mod.rs  options.rs
coding/ruby-benchs/: array_flatten.rb  digests.rb  html_tags-regexps.rb  int_list-json_vs_bin.rb  list_include-array_vs_set.rb  matrix-each.rb  srandom_hex-sizes.rb  string_case_insensitive_cmp.rb  string_include.rb  string_ngrams.rb
coding/symcrypt/: README.md
data_spoofer/: headers.h
ebooks/: generate-cbc.sh
gerrit/: change-merged  patchset-created
identities/: eth.pub  ltc.txt
memos/: openssl-ca  openssl-ca.md  ssh-tunnel-systemd.md
misc/: filemanager.rb  my.bib  netboot.rb  poketwich  port_scanner.c  rawdns.c  stack_ret_overwrite.c  vm.xml
realtimeclock/: realtimeclock.c
research/: README.md
scripts/: automount-extradisks.sh  openssl-check-host-cert-date.sh  strip-pdf-metadata.sh
(+13 files in other folders)
