[package]
name = "rgrep"
version = "0.1.0"
authors = ["Luc Sarzyniec <devel@olbat.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
simd = ["twoway"]

[dependencies]
twoway = { version = "~0.2.1", optional = true }

[dev-dependencies]
tempfile = { version = "~3.1" }

[lib]
name = "rgrep"

[[bin]]
name = "rgrep"
